--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,6 @@ Redirect 301 /decorative-driveways-sidewalks-patios http://floorcoat.ca/services
 Redirect 301 /logos http://floorcoat.ca/services
 Redirect 301 /about-floor-coat-inc http://floorcoat.ca
 
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^(.*)$ $1.html
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
